Let's make sure we're actually looking at the name of the resource so we can count it correctly.
Use the beta iam.yml for any branch but master

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -17,7 +17,7 @@ jobs:
         run: sudo pip install -U awscli
       - name: Grab the latest iam.yml
         run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp s3://beta.${{ secrets.AWS_S3_BUCKET }}/iam.yml iam.yml
-        if: github.ref == 'refs/heads/develop'
+        if: github.ref != 'refs/heads/master'
       - name: Grab the latest iam.yml
         run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp s3://${{ secrets.AWS_S3_BUCKET }}/iam.yml iam.yml
         if: github.ref == 'refs/heads/master'
