--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -6,6 +6,7 @@ on:
       - created
   schedule:
     - cron: '15 1 * * 1'
+  workflow_dispatch:
 jobs:
   run_templating:
     name: Runs templating
