--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -7,6 +7,11 @@ on:
   schedule:
     - cron: '15 1 * * 1'
   workflow_dispatch:
+    inputs:
+      deploy:
+        description: Should we deploy the results of the templating?
+        required: true
+        default: true
 jobs:
   run_templating:
     name: Runs templating
@@ -41,7 +46,7 @@ jobs:
     name: Upload assets
     needs: run_templating
     runs-on: ubuntu-latest
-    if: (github.event_name == 'push' || github.event_name == 'schedule') && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master')
+    if: ((github.event_name == 'push' || github.event_name == 'schedule') && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master')) || github.event.inputs.deploy == true
     steps:
       - name: Grab html files from build job
         uses: actions/download-artifact@v1
