--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -16,16 +16,24 @@ jobs:
   run_templating:
     name: Runs templating
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: Checking out code
         uses: actions/checkout@v2
       - name: Installing the awscli so we can download and upload artifacts to s3
         run: sudo pip install -U awscli
       - name: Grab the latest iam.yml
-        run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp s3://beta.${{ secrets.AWS_S3_BUCKET }}/iam.yml iam.yml
+        run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} aws s3 cp s3://beta.${{ secrets.AWS_S3_BUCKET }}/iam.yml iam.yml
         if: github.ref != 'refs/heads/master'
       - name: Grab the latest iam.yml
-        run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp s3://${{ secrets.AWS_S3_BUCKET }}/iam.yml iam.yml
+        run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} aws s3 cp s3://${{ secrets.AWS_S3_BUCKET }}/iam.yml iam.yml
         if: github.ref == 'refs/heads/master'
       - name: Install perl dependencies
         run: sudo apt install libtemplate-perl cpanminus
@@ -46,8 +54,16 @@ jobs:
     name: Upload assets
     needs: run_templating
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     if: ((github.event_name == 'push' || github.event_name == 'schedule') && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master')) || github.event.inputs.deploy == 'true'
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: Grab html files from build job
         uses: actions/download-artifact@v1
         with:
@@ -55,10 +71,10 @@ jobs:
       - name: Installing the awscli so we can upload artifacts to s3
         run: sudo pip install -U awscli
       - name: Upload HTML 
-        run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --acl public-read --recursive --exclude "*" --include "*.html" ./ s3://beta.${{ secrets.AWS_S3_BUCKET }}/
+        run: AWS_DEFAULT_REGION=${{ secrets.AWS_REGION}} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --acl public-read --recursive --exclude "*" --include "*.html" ./ s3://beta.${{ secrets.AWS_S3_BUCKET }}/
         working-directory: ./html
         if: github.ref == 'refs/heads/develop'
       - name: Upload HTML 
-        run: AWS_DEFAULT_REGION=${{ secrets.AWS_S3_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --acl public-read --recursive --exclude "*" --include "*.html" ./ s3://${{ secrets.AWS_S3_BUCKET }}/
+        run: AWS_DEFAULT_REGION=${{ secrets.AWS_REGION}} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --acl public-read --recursive --exclude "*" --include "*.html" ./ s3://${{ secrets.AWS_S3_BUCKET }}/
         working-directory: ./html
         if: github.ref == 'refs/heads/master'
