Get rid of ACLs, grossly outdated method for access control

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -71,10 +71,10 @@ jobs:
       - name: Installing the awscli so we can upload artifacts to s3
         run: sudo pip install -U awscli
       - name: Upload HTML 
-        run: AWS_DEFAULT_REGION=${{ secrets.AWS_REGION}} aws s3 cp --acl public-read --recursive --exclude "*" --include "*.html" ./ s3://beta.${{ secrets.AWS_S3_BUCKET }}/
+        run: AWS_DEFAULT_REGION=${{ secrets.AWS_REGION}} aws s3 cp --recursive --exclude "*" --include "*.html" ./ s3://beta.${{ secrets.AWS_S3_BUCKET }}/
         working-directory: ./html
         if: github.ref == 'refs/heads/develop'
       - name: Upload HTML 
-        run: AWS_DEFAULT_REGION=${{ secrets.AWS_REGION}} aws s3 cp --acl public-read --recursive --exclude "*" --include "*.html" ./ s3://${{ secrets.AWS_S3_BUCKET }}/
+        run: AWS_DEFAULT_REGION=${{ secrets.AWS_REGION}} aws s3 cp --recursive --exclude "*" --include "*.html" ./ s3://${{ secrets.AWS_S3_BUCKET }}/
         working-directory: ./html
         if: github.ref == 'refs/heads/master'
